...
            <objects>
                <navigationController id="0nM-4c-Gas" customClass="NavigationViewController" customModule="Reciplease" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="vdi-cP-Cj8"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="g5T-a8-pQH">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Favorites" image="star.fill" catalog="system" id="wEw-Wh-P1F"/>
                    <navigationItem key="navigationItem" title="Reciplease" id="Y9A-oB-918">
                        <barButtonItem key="backBarButtonItem" title="Back" id="HGW-de-Tem">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        </barButtonItem>
...
                                        <rect key="frame" x="50" y="484" width="314" height="58"/>
                                        <color key="backgroundColor" red="0.34555989500000001" green="0.57876247169999995" blue="0.38820677999999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <accessibility key="accessibilityConfiguration" identifier="searchButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="fQQ-oI-x9z" secondAttribute="height" multiplier="157:29" id="SOR-V6-mm5"/>
...
                                <rect key="frame" x="327" y="271" width="72" height="36"/>
                                <color key="backgroundColor" red="0.54121834040000005" green="0.54508918520000005" blue="0.54509854319999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="clearButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="DT9-bW-9CB"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Lemon, Cheese, Sausages..." textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="tBP-jy-aej">
                                <rect key="frame" x="32" y="173" width="274" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="ingredientText"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="tBP-jy-aej" secondAttribute="height" multiplier="137:17" id="SmT-Xh-wCQ"/>
...
                                <rect key="frame" x="327" y="172" width="72" height="36"/>
                                <color key="backgroundColor" red="0.34555989500000001" green="0.57876247169999995" blue="0.38820677999999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="addButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="L8d-fZ-vHi"/>
...
                        <outlet property="IngredientsTextField" destination="tBP-jy-aej" id="hS9-Cg-HWO"/>
                        <outlet property="IngredientsTextView" destination="oG5-b5-5Ah" id="ves-9y-d5P"/>
                        <outlet property="SearchButton" destination="fQQ-oI-x9z" id="xYM-95-FYF"/>
                        <outlet property="addButton" destination="xxm-ug-ptJ" id="u83-Pa-Jfe"/>
                        <outlet property="clearButton" destination="NS5-ai-WxA" id="yPY-MX-dW5"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Kefa-Regular" family="Kefa" pointSize="27"/>
                                        <state key="normal" title="Get directions">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                    </view>
                    <navigationItem key="navigationItem" title="Reciplease" id="VjP-Mb-38e">
                        <barButtonItem key="rightBarButtonItem" title="favorit" image="star.fill" catalog="system" id="zKo-oH-WRL">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
...
